--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to Average Happiness	 
+description: You deserved to be happy even if your are not the chosen one.
 template: splash # Remove or comment out this line to display the site sidebar on this page.
 hero:
   tagline: Congrats on setting up a new Starlight project!
