add sidebar and language support (but currently will update in traditional Chinese only

--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -1,15 +1,15 @@
 ---
 title: Welcome to Average Happiness	 
 description: You deserved to be happy even if your are not the chosen one.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
+#template: splash # Remove or comment out this line to display the site sidebar on this page.
 hero:
   tagline: Congrats on setting up a new Starlight project!
   image:
-    file: ../../assets/houston.webp
+    file: ../../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
+    - text: Start
+      link: /five_aspect
+      icon: heart
     - text: Read the Starlight docs
       link: https://starlight.astro.build
       icon: external
