set zh-tw as root

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,9 +3,9 @@ title: Welcome to Average Happiness
 description: You deserved to be happy even if your are not the chosen one.
 #template: splash # Remove or comment out this line to display the site sidebar on this page.
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Try to write some tricks about happiness to make myself happy :)
   image:
-    file: ../../../assets/houston.webp
+    file: ../../assets/IMG_3639.JPG
   actions:
     - text: Start
       link: /five_aspect
@@ -18,13 +18,13 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Five Major Aspects in Life
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="Spritual" icon="pencil">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Change page layout" icon="document">
+	<Card title="Relational" icon="document">
 		Delete `template: splash` in `src/content/docs/index.mdx` to display a
 		sidebar on this page.
 	</Card>
@@ -34,7 +34,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Configure your site" icon="setting">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
+	<Card title="I hate Documentation" icon="open-book">
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
