220 add several fragments

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,6 +11,7 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 import { LinkCard } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
 ## Five Major Aspects in Life
 
@@ -42,7 +43,9 @@ import { LinkCard } from '@astrojs/starlight/components';
 />
 
 
-Dashboard: 
+
+
+Dashboard:
 * 先給與量化分數，若太低再尋找質性的理由（為什麼我會覺得我在這個面向分數過低？）
 
 工作（各種勞動形式）
@@ -63,3 +66,8 @@ Dashboard:
 
 	朋友
 
+<Aside type="caution" title="提醒">
+本站內容僅為個人心得分享，不構成任何醫療建議。
+
+若您正面臨身心方面的困擾，建議尋求專業醫療人員的協助。
+</Aside>
